--- a/.env.example
+++ b/.env.example
@@ -7,12 +7,13 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
+# PostgreSQL 17 configuration
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_PORT=5432
 DB_DATABASE=topvorm_cursus
-DB_USERNAME=root
+DB_USERNAME=postgres
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
